# django-craftsman

./: CHANGELOG.md  CONTRACTS.md  MANIFEST.in  README.md  __init__.py  admin.py  analytics.py  apps.py  conf.py  exceptions.py  pyproject.toml  results.py  service.py  urls.py  views.py
adapters/: __init__.py  noop.py  offerman.py  production.py  stockman.py
api/: __init__.py  serializers.py  urls.py  views.py
contrib/admin_unfold/: __init__.py  admin.py  apps.py  base.py
contrib/stockman/: __init__.py  apps.py  handlers.py  production.py
contrib/stockman/management/commands/: load_craftsman_demo.py
docs/concepts/: production-flow.md
management/commands/: load_craftsman_demo.py
migrations/: 0001_initial.py  0002_alter_historicalplan_options_and_more.py  0002_v23_plan_planitem_recipe_updates.py  0003_add_step_fields.py  0003_codesequence.py  0004_recipe_item_and_dough_weight.py  0005_rename_shaping_baking.py  0006_revert_decimal_places.py  0007_quantity_decimal_zero.py  0008_historicalplan_uuid_historicalrecipe_uuid_plan_uuid_and_more.py
models/: __init__.py  plan.py  position.py  recipe.py  sequence.py  work_order.py
protocols/: __init__.py  demand.py  product.py  stock.py
services/: __init__.py  execution.py  ingredients.py  scheduling.py
signals/: __init__.py  handlers.py
templatetags/: craftsman_filters.py
tests/: settings.py  test_analytics.py  test_api.py  test_api_urls.py  test_demand_forecast.py  test_hardening.py  test_ingredients.py  test_production_backend.py  test_recipe_validation.py  test_reservation_flow.py  test_sequence.py  test_service.py  test_signal_handlers.py
